adjusted root flex class to column and row versions / adjusted borders for buttons/links / added form to favorites page / added location for favorites to update / prev and next buttons / fixed flex issues site wide after root flex selector update / corrected path for last-modified script / changed footer in desktop mode to 2fr / updated footer spacing / form completed

--- a/final-project/styles/home.css
+++ b/final-project/styles/home.css
@@ -35,7 +35,7 @@
 
 .hero input[type="search"]{
     width: 100%;
-    height: 44px;
+    height: var(--touch-target);
     border: var(--border);
     border-radius: var(--radius);
     color: var(--text1);
